--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <DOCTYPE HTML>
-<html>
+<html lang="en">
   <head>
+    <title>Water Savings Tracker</title>
   </head>
   <body>
     <!--<script src="../bower_components/lodash/lodash.min.js"></script>-->
