--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,21 @@
 <DOCTYPE HTML>
 <html lang="en">
+
   <head>
     <title>Water Savings Tracker</title>
+    <link rel="stylesheet" href="styles.css">
   </head>
+
   <body>
+    <div class="main">
+    </div>
+
+    <!-- libraries -->
+
+    <!-- TODO: bundle scripts -->
     <!--<script src="../bower_components/lodash/lodash.min.js"></script>-->
     <!--<script src="../bower_components/jquery/dist/jquery.min.js"></script>-->
     <!--<script src="../bower_components/backbone/backbone-min.js"></script>-->
-    
   </body>
+
 </html>
